меняет правильно/неправильно на хорошо/плохо

--- a/html-css.html
+++ b/html-css.html
@@ -127,7 +127,7 @@
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 project/
   pictures/
     catalog/
@@ -152,7 +152,7 @@ project/
   catalog.html
   index.html
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 project/
   assets/
     logo.svg
@@ -177,13 +177,13 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно--&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо--&gt;
 &lt;ul&gt;
 ∙∙&lt;li&gt;Пункт&lt;/li&gt;
 ∙∙&lt;li&gt;Пункт&lt;/li&gt;
 &lt;/ul&gt;
 
-&lt;!-- Неправильно--&gt;
+&lt;!-- Плохо--&gt;
 &lt;ul&gt;
 → &lt;li&gt;Пункт&lt;/li&gt;
 ∙∙∙∙&lt;li&gt;Пункт&lt;/li&gt;∙∙∙∙∙∙∙
@@ -211,7 +211,7 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;!DOCTYPE html&gt;
 &lt;html lang="ru"&gt;
   &lt;head&gt;
@@ -221,7 +221,7 @@ project/
   &lt;body&gt;Страница&lt;/body&gt;
 &lt;/html&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"&gt;
 &lt;html&gt;
   &lt;title&gt;Заголовок&lt;/title&gt;
@@ -243,7 +243,7 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;div class="menu"&gt;
   &lt;ul&gt;
     &lt;li&gt;
@@ -258,7 +258,7 @@ project/
   &lt;/ul&gt;
 &lt;/div&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;div class="menu"&gt;&lt;ul&gt;
   &lt;li&gt;&lt;a href=""&gt;Первый&lt;/a&gt;&lt;/li&gt;
   &lt;li&gt;&lt;a href=""&gt;
@@ -279,7 +279,7 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;ul&gt;
   &lt;li&gt;Первый&lt;/li&gt;
   &lt;li&gt;Второй&lt;/li&gt;
@@ -292,7 +292,7 @@ project/
   &lt;path d="M125,5.15c.89-3,0-5.15-4.23-5.15h-14a6,6,0,0,0-6.09Z"/&gt;
 &lt;/svg&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;UL&gt;
   &lt;LI&gt;Первый
   &lt;LI&gt;Второй
@@ -312,14 +312,14 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;ul&gt;
   &lt;li&gt;Первый&lt;/li&gt;
   &lt;li&gt;Второй&lt;/li&gt;
   &lt;li&gt;Третий&lt;/li&gt;
 &lt;/ul&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;ul&gt;
   &lt;li&gt;Первый
   &lt;li&gt;Второй
@@ -337,12 +337,12 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;img src="images/picture.png" width="400" height="400" alt="Кот смотрит на солнышко."&gt;
 
 &lt;input type="text" name="name"&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;img src="images/picture.png" width="400" height="400" alt="Кот смотрит на солнышко." /&gt;
 
 &lt;input type="text"&gt;&lt;/input&gt;
@@ -361,14 +361,14 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;label class="field-group-label" for="appointment-phone"&gt;
 &lt;input class="field-group-input field" type="text" id="appointment-phone" placeholder="+7 000-00-00"&gt;
 
 &lt;label class="field-group-label" for="appointment-date"&gt;
 &lt;input class="field-group-input field" type="text" id="appointment-date" placeholder="01.01.2020"&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;label for="appointment-phone" class="field-group-label"&gt;
 &lt;input class="field-group-input field" type="text" placeholder="+7 000-00-00" id="appointment-phone" &gt;
 
@@ -386,10 +386,10 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;input type="text" disabled required&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;input type="text" disabled="disabled" required="required"&gt;
                 </code></pre>
               </figure>
@@ -403,10 +403,10 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;input class="field-group-input field" type="text" id="appointment-date" placeholder="01.01.2020"&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;input class = "field-group-input field" type = "text" id = "appointment-date" placeholder = "01.01.2020"&gt;
                 </code></pre>
               </figure>
@@ -420,10 +420,10 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;input class="field-group-input field" type="text" id="appointment-date" placeholder="01.01.2020"&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;input class='field-group-input field' type='text' id='appointment-date' placeholder='01.01.2020'&gt;
 
 &lt;input class=field-group-input type=text id=appointment-date placeholder=01.01.2020&gt;
@@ -439,12 +439,12 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;button class="button" type="button" onclick="show('menu')"&gt;
   Меню
 &lt;/button&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;button class="button" type="button" onclick="show("menu")"&gt;
   Меню
 &lt;/button&gt;
@@ -460,10 +460,10 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;img src="images/picture.png" width="400" height="400" alt="Кот смотрит на солнышко."&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;img src="images/picture.png" width="400px" height="400px" alt="Кот смотрит на солнышко."&gt;
                 </code></pre>
               </figure>
@@ -482,12 +482,12 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;img src="logo.png" alt="" width="300" height="150"&gt;
 &lt;video src="source/video.mp4" width="400" height="400"&gt;&lt;/video&gt;
 &lt;iframe src="https://maps.google.com" width="400" height="400"&gt;&lt;/iframe&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;img src="logo.png" alt=""&gt;
 &lt;video src="source/video.mp4" width="400" height="400"&gt;&lt;/video&gt;
 &lt;iframe src="https://maps.google.com" width="400" height="400"&gt;&lt;/iframe&gt;
@@ -503,13 +503,13 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;input class="form-input form-input-field" type="text"&gt;
 &lt;input class="form_input form_input_field" type="text"&gt;
 &lt;input class="form__input form-input__field" type="text"&gt;
 &lt;input class="form--input form-input--field" type="text"&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;input class="formInput formInputField" type="text"&gt;
 &lt;input class="form-input form_input_field" type="text"&gt;
                 </code></pre>
@@ -524,11 +524,11 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;form method="post"&gt;&lt;/form&gt;
 &lt;form method="get"&gt;&lt;/form&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;form method=""&gt;&lt;/form&gt;
 &lt;form&gt;&lt;/form&gt;
                 </code></pre>
@@ -545,16 +545,16 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;input type="radio" id="choose"&gt;
 &lt;label for="choose"&gt;Радио кнопка&lt;/label&gt;
 
-&lt;!-- Правильно --&gt;
+&lt;!-- Хорошо --&gt;
 &lt;label&gt;
   &lt;input type="radio"&gt; Радио кнопка
 &lt;/label&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;input type="radio" id="choose"&gt; Радио кнопка</code></pre>
               </figure>
             </div>
@@ -569,7 +569,7 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;!DOCTYPE html&gt;
 &lt;html lang="ru"&gt;
   &lt;head&gt;
@@ -578,7 +578,7 @@ project/
   &lt;body&gt;…&lt;/body&gt;
 &lt;/html&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;!DOCTYPE html&gt;
 &lt;html lang="ru"&gt;
   &lt;head&gt;…&lt;/head&gt;
@@ -602,7 +602,7 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;!DOCTYPE html&gt;
 &lt;html lang="ru"&gt;
   &lt;head&gt;…&lt;/head&gt;
@@ -612,7 +612,7 @@ project/
   &lt;/body&gt;
 &lt;/html&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;!DOCTYPE html&gt;
 &lt;html lang="ru"&gt;
   &lt;head&gt;
@@ -646,10 +646,10 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-markup">&lt;!-- Правильно --&gt;
+                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
 &lt;link rel="stylesheet" href="module.css"&gt;
 
-&lt;!-- Неправильно --&gt;
+&lt;!-- Плохо --&gt;
 &lt;style&gt;
   @import url("module.css");
 &lt;/style&gt;</code></pre>
@@ -672,7 +672,7 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .block {
   margin-bottom: 0;
   margin-top: 0;
@@ -685,7 +685,7 @@ project/
   background-color: #000000;
 }
 
-/* Неправильно */
+/* Плохо */
 .block{margin-bottom: 0;
     margin-top: 0;
   font-size: 14px;line-height: 20;
@@ -709,13 +709,13 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .alert-danger { … }
 .tweet .user-picture { … }
 .button { … }
 .layout-center { … }
 
-/* Неправильно */
+/* Плохо */
 .testElement { … }
 .t { … }
 .big_red_button { … }
@@ -731,12 +731,12 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .element {
   color: red;
 }
 
-/* Неправильно */
+/* Плохо */
 .Element {
   Color: red;
 }
@@ -757,14 +757,14 @@ project/
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 h1,
 h2,
 h3 {
   margin-top: 0;
 }
 
-/* Неправильно */
+/* Плохо */
 h1, h2, h3 {
   margin-top: 0;
 }
@@ -780,11 +780,11 @@ h1, h2, h3 {
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 h2 + h3 {}
 ul > li {}
 
-/* Неправильно */
+/* Плохо */
 h2+h2 p{}
 ul >li {}
 </code></pre>
@@ -802,14 +802,14 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .block {
   background-color: #ff0000;
   border-left-color: #00ff00;
   color: rgba(0, 0, 0, 0.5);
 }
 
-/* Неправильно */
+/* Плохо */
 .block {
   background-color: #F00;
   border-left-color: rgb(0, 255, 0);
@@ -827,11 +827,11 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .block {
   color: #ff0000;
 }
-/* Неправильно */
+/* Плохо */
 .block {
   color: red;
   background-color: #ff0;
@@ -848,12 +848,12 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .field[type="text"] {
   background-color: url("images/cat.jpg");
 }
 
-/* Неправильно */
+/* Плохо */
 .field[type=text] {
   background-color: url(images/cat.jpg);
 }
@@ -870,13 +870,13 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .block {
   opacity: 0.5;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-/* Неправильно */
+/* Плохо */
 .block {
   opacity: .5;
   background-color: rgba(0, 0, 0, .5);
@@ -894,13 +894,13 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .element {
   background-color: rgb(0, 0, 0);
   color: rgba(0, 0, 0, 0.5);
 }
 
-/* Неправильно */
+/* Плохо */
 .element {
   background-color: rgb(0,0,0);
   color: rgba(0 ,0 ,0 ,0.5);
@@ -917,14 +917,14 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .element {
   border: 0;
   box-shadow: 0 1px 2px #cccccc, inset 0 1px 0 #ffffff;
   margin-top: 0;
 }
 
-/* Неправильно */
+/* Плохо */
 .element {
   border: 0px;
   box-shadow: 0px 1px 2px #cccccc, inset 0px 1px 0 #ffffff;
@@ -946,7 +946,7 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .block {
   margin: 0;
   margin-left: 20px;
@@ -954,7 +954,7 @@ ul >li {}
   border-bottom-color: #ff0000;
 }
 
-/* Неправильно */
+/* Плохо */
 .block {
   margin-left: 10px;
   border-left: 10px solid #000000;
@@ -973,12 +973,12 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .block {
   width: 2.33%;
 }
 
-/* Неправильно */
+/* Плохо */
 .block {
   width: 2.33333%;
 }
@@ -997,7 +997,7 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .visually-hidden {
   position: absolute !important;
   width: 1px !important;
@@ -1009,7 +1009,7 @@ ul >li {}
   overflow: hidden !important;
 }
 
-/* Неправильно */
+/* Плохо */
 .element {
   font-size: 17px !important;
 }
@@ -1029,7 +1029,7 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 @font-face {
   font-family: "PT Sans";
   font-weight: normal;
@@ -1046,7 +1046,7 @@ ul >li {}
   src: url("../fonts/pt-sans-bold.woff2") format("woff2");
 }
 
-/* Неправильно */
+/* Плохо */
 @font-face {
   font-family: "PT Sans Regular";
 }
@@ -1081,22 +1081,22 @@ ul >li {}
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 body {
   font-family: "Helvetica", "Arial", sans-serif;
 }
 
-/* Неправильно: указан только нестандартный шрифт */
+/* Плохо: указан только нестандартный шрифт */
 body {
   font-family: "Helvetica";
 }
 
-/* Неправильно: указан только нестандартный шрифт и тип семейства, альтернативный веб-безопасный шрифт отсутствует */
+/* Плохо: указан только нестандартный шрифт и тип семейства, альтернативный веб-безопасный шрифт отсутствует */
 body {
   font-family: "Helvetica", sans-serif;
 }
 
-/* Неправильно: Georgia — шрифт с засечками, а нестандартный шрифт — без засечек */
+/* Плохо: Georgia — шрифт с засечками, а нестандартный шрифт — без засечек */
 body {
   font-family: "Helvetica", "Georgia", sans-serif;
 }</code></pre>
@@ -1113,7 +1113,7 @@ body {
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
-                <pre><code class="language-css">/* Правильно */
+                <pre><code class="language-css">/* Хорошо */
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -1132,7 +1132,7 @@ body {
               </figure>
               <br>
               <figure>
-                <pre><code class="language-css">/* Неправильно */
+                <pre><code class="language-css">/* Плохо */
 h1 {
   font-size: 0;
 }
