добавляет уточнение про конфигурации

--- a/html-css.html
+++ b/html-css.html
@@ -65,7 +65,7 @@
             <li><a href="#html-img-sizes">Размеры замещаемых элементов</a></li>
             <li><a href="#html-class-name">Разделители в имени класса</a></li>
             <li><a href="#html-form-method">Атрибут method в форме</a></li>
-            <li><a href="#html-form-labels">Подписи полей ввода</a></li>
+            <!-- <li><a href="#html-form-labels">Подписи полей ввода</a></li> -->
             <li><a href="#html-style-includes">Подключение стилей</a></li>
             <li><a href="#html-js-includes">Подключение скриптов</a></li>
             <li><a href="#html-validator">Валидность</a></li>
@@ -90,8 +90,8 @@
             <li><a href="#css-repeated-properties">Повторяющиеся свойства</a></li>
             <li><a href="#css-fractions">Дробные значения</a></li>
             <li><a href="#css-important">!important</a></li>
-            <li><a href="#css-fonts-add">Подключение шрифтов</a></li>
-            <li><a href="#css-font-variant">Варианты шрифта</a></li>
+            <!-- <li><a href="#css-fonts-add">Подключение шрифтов</a></li> -->
+            <!-- <li><a href="#css-font-variant">Варианты шрифта</a></li> -->
             <li><a href="#css-visually-hidden">Доступное скрытие</a></li>
             <li><a href="#css-order">Порядок свойств</a></li>
           </ul>
@@ -110,6 +110,7 @@
                 <li>Для HTML используйте <a href="https://github.com/htmlacademy/htmlhint-config-htmlacademy">HTMLHint</a>.</li>
                 <li>Для стилей <a href="https://github.com/htmlacademy/stylelint-config-htmlacademy">Stylelint</a>.</li>
               </ul>
+              <p>По ссылкам находятся конфигурации Академии для этих инструментов. Конфигурации частично покрывают то, что описано в этом стиле кода, и в них нет ничего, что не описано ниже.</p>
             </div>
           </article>
         </section>
@@ -536,7 +537,7 @@ project/
             </div>
           </article>
 
-          <article class="chapter-part">
+          <!-- <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="html-form-labels">Подписи полей ввода</h3>
               <p>
@@ -558,7 +559,7 @@ project/
 &lt;input type="radio" id="choose"&gt; Радио кнопка</code></pre>
               </figure>
             </div>
-          </article>
+          </article> -->
 
           <article class="chapter-part">
             <div class="chapter-part-col">
@@ -1018,7 +1019,7 @@ ul >li {}
             </div>
           </article>
 
-          <article class="chapter-part">
+          <!-- <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="css-fonts-add">Подключение шрифтов</h3>
               <ul>
@@ -1056,9 +1057,9 @@ ul >li {}
 }</code></pre>
               </figure>
             </div>
-          </article>
+          </article> -->
 
-          <article class="chapter-part">
+          <!-- <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="css-font-variant">Варианты шрифта</h3>
               <p>
@@ -1102,7 +1103,7 @@ body {
 }</code></pre>
               </figure>
             </div>
-          </article>
+          </article> -->
 
           <article class="chapter-part">
             <div class="chapter-part-col">
