убирает единицы измерения в атрибутах

--- a/html-css.html
+++ b/html-css.html
@@ -61,7 +61,7 @@
             <li><a href="#html-attr-no-space">Форматирование атрибутов</a></li>
             <li><a href="#html-attr-double-quotes">Кавычки в атрибутах</a></li>
             <li><a href="#html-attr-single-quotes">Кавычки в значениях атрибутов</a></li>
-            <li><a href="#html-attr-no-units">Единицы измерения в атрибутах</a></li>
+            <!-- <li><a href="#html-attr-no-units">Единицы измерения в атрибутах</a></li> -->
             <li><a href="#html-img-sizes">Размеры замещаемых элементов</a></li>
             <li><a href="#html-class-name">Разделители в имени класса</a></li>
             <li><a href="#html-form-method">Атрибут method в форме</a></li>
@@ -454,7 +454,7 @@ project/
             </div>
           </article>
 
-          <article class="chapter-part">
+          <!-- <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="html-attr-no-units">Единицы измерения в атрибутах</h3>
               <p>В атрибутах нет единиц измерения.</p>
@@ -469,7 +469,7 @@ project/
                 </code></pre>
               </figure>
             </div>
-          </article>
+          </article> -->
 
           <article class="chapter-part">
             <div class="chapter-part-col">
