уточняет форматирование тегов

--- a/html-css.html
+++ b/html-css.html
@@ -238,7 +238,7 @@ project/
               <h3 id="html-tags-formatting">Форматирование тегов</h3>
               <ul>
                 <li>Вложенность тегов обозначается переносами и отступами.</li>
-                <li>Каждый новый вложенный тег переносится на отдельную строку с отступом.</li>
+                <li>Каждый новый вложенный тег переносится на отдельную строку с отступом, кроме текстовых элементов.</li>
                 <li>Текст внутри тегов остаётся на одной строке с тегами.</li>
               </ul>
             </div>
