Обновляет порядок для текстовый свойств

--- a/html-css.html
+++ b/html-css.html
@@ -1191,11 +1191,11 @@ h1 {
   padding: 10px;
 
   /* Типографика */
-  font: normal 13px/1.5 "Arial", sans-serif;
+  font-family: "Arial", sans-serif;
   font-style: normal;
   font-size: 13px;
-  line-height: 1.5;
-  font-family: "Arial", sans-serif;
+  line-height: 20px;
+  font-weight: 700;
   text-align: center;
   color: #333333;
 
