Улучшает пример "Регистр тегов и атрибутов"

--- a/html-css.html
+++ b/html-css.html
@@ -310,9 +310,9 @@ trim_trailing_whitespace = false</code></pre>
 
 &lt;!-- Плохо --&gt;
 &lt;UL&gt;
-  &lt;LI&gt;Первый
-  &lt;LI&gt;Второй
-  &lt;LI&gt;Третий
+  &lt;LI&gt;Первый&lt;/LI&gt;
+  &lt;LI&gt;Второй&lt;/LI&gt;
+  &lt;LI&gt;Третий&lt;/LI&gt;
 &lt;/UL&gt;
 
 &lt;IMG class="IMAGE" SRC="images/picture.png" WIDTH="400" HEIGHT="400" ALT="Кот смотрит на солнышко."&gt;
