--- a/html-css.html
+++ b/html-css.html
@@ -56,14 +56,12 @@
             <li><a href="#html-tags-formatting">Форматирование тегов</a></li>
             <li><a href="#html-closed-tag">Двойные и одиночные теги</a></li>
             <li><a href="#html-attr-order">Порядок атрибутов</a></li>
-            <li><a href="#html-single-attr-no-value">Одиночные атрибуты</a></li>
+            <li><a href="#html-single-attr-no-value">Логические атрибуты</a></li>
             <li><a href="#html-attr-no-space">Форматирование атрибутов</a></li>
             <li><a href="#html-attr-double-quotes">Кавычки в атрибутах и в значениях</a></li>
-            <!-- <li><a href="#html-attr-no-units">Единицы измерения в атрибутах</a></li> -->
             <li><a href="#html-img-sizes">Размеры замещаемых элементов</a></li>
             <li><a href="#html-class-name">Разделители в имени класса</a></li>
             <li><a href="#html-form-method">Атрибут method в форме</a></li>
-            <!-- <li><a href="#html-form-labels">Подписи полей ввода</a></li> -->
             <li><a href="#html-style-includes">Подключение стилей</a></li>
             <li><a href="#html-js-includes">Подключение скриптов</a></li>
             <li><a href="#html-validator">Валидность</a></li>
@@ -74,22 +72,18 @@
           <a href="#css">CSS</a>
           <ul class="sidebar-menu">
             <li><a href="#css-import">Правило @import</a></li>
+            <li><a href="#css-case-sensitivity">Регистр селекторов и свойств</a></li>
             <li><a href="#css-structure">Структура объявления</a></li>
             <li><a href="#css-class-names">Имена классов</a></li>
-            <li><a href="#css-case-sensitivity">Регистр селекторов и свойств</a></li>
             <li><a href="#css-multiselectors">Перенос селекторов</a></li>
             <li><a href="#css-combnators">Пробелы между комбинаторами</a></li>
             <li><a href="#css-color-format">Формат цветов</a></li>
-            <li><a href="#css-color">Цвета</a></li>
             <li><a href="#css-quotes">Кавычки</a></li>
-            <li><a href="#css-leading-zero">Ведущий ноль</a></li>
-            <li><a href="#css-comma">Пробелы после запятых</a></li>
-            <li><a href="#css-units">Единицы измерения</a></li>
+            <li><a href="#css-leading-zero">Ведущий ноль и пробелы после запятых</a></li>
             <li><a href="#css-repeated-properties">Повторяющиеся свойства</a></li>
+            <li><a href="#css-units">Единицы измерения</a></li>
             <li><a href="#css-fractions">Дробные значения</a></li>
             <li><a href="#css-important">!important</a></li>
-            <!-- <li><a href="#css-fonts-add">Подключение шрифтов</a></li> -->
-            <!-- <li><a href="#css-font-variant">Варианты шрифта</a></li> -->
             <li><a href="#css-visually-hidden">Доступное скрытие</a></li>
             <li><a href="#css-order">Порядок свойств</a></li>
           </ul>
@@ -517,30 +511,6 @@ trim_trailing_whitespace = false</code></pre>
             </div>
           </article>
 
-          <!-- <article class="chapter-part">
-            <div class="chapter-part-col">
-              <h3 id="html-form-labels">Подписи полей ввода</h3>
-              <p>
-                Для улучшения взаимодействия пользователя с элементами форм, при нажатии на подпись поля, оно активируется. Для этого элемент формы связывается с его описанием с помощью идентификатора и атрибута <code>for</code> тега <code>&lt;label&gt;</code>.
-              </p>
-            </div>
-            <div class="chapter-part-col gray-bgcolor">
-              <figure>
-                <pre><code class="language-markup">&lt;!-- Хорошо --&gt;
-&lt;input type="radio" id="choose"&gt;
-&lt;label for="choose"&gt;Радио кнопка&lt;/label&gt;
-
-&lt;!-- Хорошо --&gt;
-&lt;label&gt;
-  &lt;input type="radio"&gt; Радио кнопка
-&lt;/label&gt;
-
-&lt;!-- Плохо --&gt;
-&lt;input type="radio" id="choose"&gt; Радио кнопка</code></pre>
-              </figure>
-            </div>
-          </article> -->
-
           <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="html-style-includes">Подключение стилей</h3>
@@ -640,6 +610,32 @@ trim_trailing_whitespace = false</code></pre>
 
           <article class="chapter-part">
             <div class="chapter-part-col">
+              <h3 id="css-case-sensitivity">Регистр селекторов и свойств</h3>
+              <p>Селекторы и свойства записаны строчными буквами.</p>
+            </div>
+            <div class="chapter-part-col gray-bgcolor">
+              <figure>
+                <pre><code class="language-css">/* Хорошо */
+.element {
+  color: red;
+}
+
+/* Плохо */
+.Element {
+  Color: red;
+}
+
+.ELEMENT {
+  COLOR: red;
+}
+
+</code></pre>
+              </figure>
+            </div>
+          </article>
+
+          <article class="chapter-part">
+            <div class="chapter-part-col">
               <h3 id="css-structure">Структура объявления</h3>
               <ul>
                 <li>Перед открывающейся фигурной скобкой стоит пробел. После скобки запись идёт с новой строки.</li>
@@ -707,32 +703,6 @@ trim_trailing_whitespace = false</code></pre>
 
           <article class="chapter-part">
             <div class="chapter-part-col">
-              <h3 id="css-case-sensitivity">Регистр селекторов и свойств</h3>
-              <p>Селекторы и свойства записаны строчными буквами.</p>
-            </div>
-            <div class="chapter-part-col gray-bgcolor">
-              <figure>
-                <pre><code class="language-css">/* Хорошо */
-.element {
-  color: red;
-}
-
-/* Плохо */
-.Element {
-  Color: red;
-}
-
-.ELEMENT {
-  COLOR: red;
-}
-
-</code></pre>
-              </figure>
-            </div>
-          </article>
-
-          <article class="chapter-part">
-            <div class="chapter-part-col">
               <h3 id="css-multiselectors">Перенос селекторов</h3>
               <p>Селекторы, разделённые запятой, записаны на новых строках.</p>
             </div>
@@ -778,6 +748,7 @@ ul >li {}
               <h3 id="css-color-format">Формат цветов</h3>
               <ul>
                 <li>Цвета записаны строчными в 6-значном формате HEX.</li>
+                <li>Шестнадцатеричное значение цвета не сокращено, а записано полностью из всех шести символов. Для записи использованы строчные буквы.</li>
                 <li>Цвета могут быть записаны функциями <code>rgba</code> или <code>hsla</code>, если нужна прозрачность.</li>
               </ul>
             </div>
@@ -803,29 +774,11 @@ ul >li {}
 
           <article class="chapter-part">
             <div class="chapter-part-col">
-              <h3 id="css-color">Цвета</h3>
-              <p>Шестнадцатеричное значение цвета не сокращено, а записано полностью из всех шести символов. Для записи использованы строчные буквы.</p>
-            </div>
-            <div class="chapter-part-col gray-bgcolor">
-              <figure>
-                <pre><code class="language-css">/* Хорошо */
-.block {
-  color: #ff0000;
-}
-/* Плохо */
-.block {
-  color: red;
-  background-color: #ff0;
-}
-</code></pre>
-              </figure>
-            </div>
-          </article>
-
-          <article class="chapter-part">
-            <div class="chapter-part-col">
               <h3 id="css-quotes">Кавычки</h3>
-              <p>Во всех случаях в стилях использованы двойные кавычки. В необязательных случаях кавычки не опущены.</p>
+              <ul>
+                <li>Во всех случаях в стилях использованы двойные кавычки. </li>
+                <li>В необязательных случаях кавычки не опущены.</li>
+              </ul>
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
@@ -846,8 +799,11 @@ ul >li {}
 
           <article class="chapter-part">
             <div class="chapter-part-col">
-              <h3 id="css-leading-zero">Ведущий ноль</h3>
-              <p>Начальный ноль для значений не сокращён.</p>
+              <h3 id="css-leading-zero">Ведущий ноль и пробелы после запятых</h3>
+              <ul>
+                <li>Начальный ноль для значений не сокращён.</li>
+                <li>После запятых в перечислениях стоит пробел.</li>
+              </ul>
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
@@ -857,59 +813,20 @@ ul >li {}
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-/* Плохо */
-.block {
-  opacity: .5;
-  background-color: rgba(0, 0, 0, .5);
-}
-
-</code></pre>
-              </figure>
-            </div>
-          </article>
-
-          <article class="chapter-part">
-            <div class="chapter-part-col">
-              <h3 id="css-comma">Пробелы после запятых</h3>
-              <p>После запятых в перечислениях стоит пробел.</p>
-            </div>
-            <div class="chapter-part-col gray-bgcolor">
-              <figure>
-                <pre><code class="language-css">/* Хорошо */
 .element {
   background-color: rgb(0, 0, 0);
   color: rgba(0, 0, 0, 0.5);
 }
 
 /* Плохо */
+.block {
+  opacity: .5;
+  background-color: rgba(0, 0, 0, .5);
+}
+
 .element {
   background-color: rgb(0,0,0);
   color: rgba(0 ,0 ,0 ,0.5);
-}
-</code></pre>
-              </figure>
-            </div>
-          </article>
-
-          <article class="chapter-part">
-            <div class="chapter-part-col">
-              <h3 id="css-units">Единицы измерения</h3>
-              <p>Единицы измерения не указаны там, где в них нет необходимости.</p>
-            </div>
-            <div class="chapter-part-col gray-bgcolor">
-              <figure>
-                <pre><code class="language-css">/* Хорошо */
-.element {
-  border: 0;
-  box-shadow: 0 1px 2px #cccccc, inset 0 1px 0 #ffffff;
-  margin-top: 0;
-}
-
-/* Плохо */
-.element {
-  border: 0px;
-  box-shadow: 0px 1px 2px #cccccc, inset 0px 1px 0 #ffffff;
-  margin-top: 0px;
 }
 
 </code></pre>
@@ -942,6 +859,32 @@ ul >li {}
   margin-left: 20px;
   border-left: 10px solid #ff0000;
 }
+</code></pre>
+              </figure>
+            </div>
+          </article>
+
+          <article class="chapter-part">
+            <div class="chapter-part-col">
+              <h3 id="css-units">Единицы измерения</h3>
+              <p>Единицы измерения не указаны там, где в них нет необходимости.</p>
+            </div>
+            <div class="chapter-part-col gray-bgcolor">
+              <figure>
+                <pre><code class="language-css">/* Хорошо */
+.element {
+  border: 0;
+  box-shadow: 0 1px 2px #cccccc, inset 0 1px 0 #ffffff;
+  margin-top: 0;
+}
+
+/* Плохо */
+.element {
+  border: 0px;
+  box-shadow: 0px 1px 2px #cccccc, inset 0px 1px 0 #ffffff;
+  margin-top: 0px;
+}
+
 </code></pre>
               </figure>
             </div>
@@ -998,92 +941,6 @@ ul >li {}
               </figure>
             </div>
           </article>
-
-          <!-- <article class="chapter-part">
-            <div class="chapter-part-col">
-              <h3 id="css-fonts-add">Подключение шрифтов</h3>
-              <ul>
-                <li>Базовые начертания семейства имеют общее название <code>font-family</code>.</li>
-                <li>Для каждого начертания указаны <code>font-weight</code> и <code>font-style</code>.</li>
-                <li>В описании шрифта указан режим отрисовки <code>font-display</code>.</li>
-              </ul>
-            </div>
-            <div class="chapter-part-col gray-bgcolor">
-              <figure>
-                <pre><code class="language-css">/* Хорошо */
-@font-face {
-  font-family: "PT Sans";
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-  src: url("../fonts/pt-sans-regular.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "PT Sans";
-  font-weight: bold;
-  font-style: normal;
-  font-display: optional;
-  src: url("../fonts/pt-sans-bold.woff2") format("woff2");
-}
-
-/* Плохо */
-@font-face {
-  font-family: "PT Sans Regular";
-}
-
-@font-face {
-  font-family: "PT Sans Bold";
-}</code></pre>
-              </figure>
-            </div>
-          </article> -->
-
-          <!-- <article class="chapter-part">
-            <div class="chapter-part-col">
-              <h3 id="css-font-variant">Варианты шрифта</h3>
-              <p>
-                Альтернативные варианты шрифта и тип семейства указаны в конце перечисления <code>font-family</code>.
-              </p>
-              <p>
-                В случае использования нестандартных шрифтов альтернативный веб-безопасный шрифт и тип семейства указаны, чтобы в случае отсутствия нестандартного шрифта в системе, изменения внешнего вида страницы были минимальны. Альтернативный шрифт указан такого же типа, что и нестандартный.
-              </p>
-              <p>
-                Порядок шрифтов следующий:
-              </p>
-              <ol>
-                <li>нестандартный шрифт;</li>
-                <li>веб-безопасный;</li>
-                <li>тип шрифта.</li>
-              </ol>
-              <p>
-                Список веб-безопасных шрифтов можно посмотреть здесь — <a href="http://www.cssfontstack.com" target="_blank">cssfontstack.com</a>.
-              </p>
-            </div>
-            <div class="chapter-part-col gray-bgcolor">
-              <figure>
-                <pre><code class="language-css">/* Хорошо */
-body {
-  font-family: "Helvetica", "Arial", sans-serif;
-}
-
-/* Плохо: указан только нестандартный шрифт */
-body {
-  font-family: "Helvetica";
-}
-
-/* Плохо: указан только нестандартный шрифт и тип семейства, альтернативный веб-безопасный шрифт отсутствует */
-body {
-  font-family: "Helvetica", sans-serif;
-}
-
-/* Плохо: Georgia — шрифт с засечками, а нестандартный шрифт — без засечек */
-body {
-  font-family: "Helvetica", "Georgia", sans-serif;
-}</code></pre>
-              </figure>
-            </div>
-          </article> -->
 
           <article class="chapter-part">
             <div class="chapter-part-col">
