Исправляет пример для регистра

--- a/html-css.html
+++ b/html-css.html
@@ -617,16 +617,16 @@ trim_trailing_whitespace = false</code></pre>
               <figure>
                 <pre><code class="language-css">/* Хорошо */
 .element {
-  color: red;
+  color: #ff0000;
 }
 
 /* Плохо */
 .Element {
-  Color: red;
+  Color: #ff0000;
 }
 
 .ELEMENT {
-  COLOR: red;
+  COLOR: #ff0000;
 }
 
 </code></pre>
